[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/OWO/Feature_OWO.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="Feature_OWO" parent="." instance=ExtResource( 1 )]

[node name="HelpLabel" type="Label" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 384.0
margin_bottom = 113.0
text = "Godot OWO Test Application
Press Left/Right to switch muscle
Press Up/Down to switch sensation
Press Enter to send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensationsLabel" type="Label" parent="."]
margin_left = 48.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 159.0
text = "On start the list of sensations 
is added here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusclesLabel" type="Label" parent="."]
margin_left = 352.0
margin_top = 128.0
margin_right = 624.0
margin_bottom = 159.0
text = "On start the list of muscles 
is added here"
__meta__ = {
"_edit_use_anchors_": false
}
